--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,9 @@
+Changes with version 2.2 :
+  * Rewrite plugin to use injection. Compiled for SonarQube 4.5.1+ LTS.
+
+Changes with version 2.1 :
+  * Allow anonymous access
+
 Changes with version 2.0 :
   * Add authentication scheme selection
   * Add l10n for the setting pages
