Add support for anonymous Gerrit connection. Anonymous connection is made if username is left blank ; password, if any, is ignored. If username is set but password is blank, logged-in connection is made.
Change-Id: I286374505e7b2e10b2f191c84be5be830906af08

--- a/src/main/resources/org/sonar/l10n/gerrit.properties
+++ b/src/main/resources/org/sonar/l10n/gerrit.properties
@@ -13,7 +13,7 @@ property.GERRIT_HOST.description=Define the gerrit host
 property.GERRIT_HTTP_PORT.name=Server port
 property.GERRIT_HTTP_PORT.description=Define the gerrit port
 property.GERRIT_HTTP_USERNAME.name=Username
-property.GERRIT_HTTP_USERNAME.description=Define the username to login with
+property.GERRIT_HTTP_USERNAME.description=Define the username to login with. Blank for anonymous.
 property.GERRIT_HTTP_PASSWORD.name=Password
 property.GERRIT_HTTP_PASSWORD.description=Define the password associated
 property.GERRIT_HTTP_AUTH_SCHEME.name=Server authentication scheme
