--- a/src/main/resources/org/sonar/l10n/gerrit_fr.properties
+++ b/src/main/resources/org/sonar/l10n/gerrit_fr.properties
@@ -13,7 +13,7 @@ property.GERRIT_HOST.description=D\u00e9fini le serveur Gerrit
 property.GERRIT_HTTP_PORT.name=Port du serveur
 property.GERRIT_HTTP_PORT.description=D\u00e9fini le port du serveur Gerrit
 property.GERRIT_HTTP_USERNAME.name=Nom d'utilisateur
-property.GERRIT_HTTP_USERNAME.description=D\u00e9fini le nom d'utilisateur \u00e0 utiliser
+property.GERRIT_HTTP_USERNAME.description=D\u00e9fini le nom d'utilisateur \u00e0 utiliser. Vide pour une connection anonyme.
 property.GERRIT_HTTP_PASSWORD.name=Mot de passe
 property.GERRIT_HTTP_PASSWORD.description=D\u00e9fini le mot de passe \u00e0 utiliser
 property.GERRIT_HTTP_AUTH_SCHEME.name=Sch\u00e9ma d'authentification
