--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,7 @@
+Changes with version 2.1 :
+  * Split Decorator into Initializer, Decorator and PostJob classes.
+  * Add facade to reduce calls
+
 Changes with version 2.0 :
   * Add authentication scheme selection
   * Add l10n for the setting pages
