Allow force SQ branch from Gerrit branch name
Change-Id: I0498ab9fdaabed9a3a9132c80d623dbc642df76a

--- a/src/main/resources/org/sonar/l10n/gerrit.properties
+++ b/src/main/resources/org/sonar/l10n/gerrit.properties
@@ -30,3 +30,5 @@ property.GERRIT_REVISION_ID.name=Patchset Revision ID
 property.GERRIT_REVISION_ID.description=Leave blank to delegate the definition by gerrit
 property.GERRIT_THRESHOLD.name=Alert threshold
 property.GERRIT_THRESHOLD.description=Sonar will vote -1 above this threshold
+property.GERRIT_FORCE_BRANCH.name=Force branch
+property.GERRIT_FORCE_BRANCH.description=Set to true to force branch creation in SQ and override its name with Gerrit's branch name.
