--- a/src/main/resources/org/sonar/l10n/gerrit_fr.properties
+++ b/src/main/resources/org/sonar/l10n/gerrit_fr.properties
@@ -30,3 +30,5 @@ property.GERRIT_REVISION_ID.name=ID de la r\u00e9vision
 property.GERRIT_REVISION_ID.description=Ne rien renseigner pour laisser Gerrit g\u00e9rer
 property.GERRIT_THRESHOLD.name=Seuil des alertes
 property.GERRIT_THRESHOLD.description=Seuil au dela duquel Sonar votera -1
+property.GERRIT_FORCE_BRANCH.name=Forcer la branche
+property.GERRIT_FORCE_BRANCH.description=Mettre \u00e0 true pour surcharger et créer automatiquement une nouvelle branche dans SonarQube avec le nom de la branche Gerrit.
