--- a/src/main/resources/org/sonar/l10n/gerrit.properties
+++ b/src/main/resources/org/sonar/l10n/gerrit.properties
@@ -32,3 +32,5 @@ property.GERRIT_THRESHOLD.name=Alert threshold
 property.GERRIT_THRESHOLD.description=Sonar will vote -1 above this threshold
 property.GERRIT_FORCE_BRANCH.name=Force branch
 property.GERRIT_FORCE_BRANCH.description=Set to true to force branch creation in SQ and override its name with Gerrit's branch name.
+property.GERRIT_COMMENT_NEW_ISSUES_ONLY.name=Comment new issues only
+property.GERRIT_COMMENT_NEW_ISSUES_ONLY.description=Sonar comment only newly created issues. Existing issues will not be reported.
