--- a/src/main/resources/org/sonar/l10n/gerrit_fr.properties
+++ b/src/main/resources/org/sonar/l10n/gerrit_fr.properties
@@ -32,3 +32,5 @@ property.GERRIT_THRESHOLD.name=Seuil des alertes
 property.GERRIT_THRESHOLD.description=Seuil au dela duquel Sonar votera -1
 property.GERRIT_FORCE_BRANCH.name=Forcer la branche
 property.GERRIT_FORCE_BRANCH.description=Mettre \u00e0 true pour surcharger et créer automatiquement une nouvelle branche dans SonarQube avec le nom de la branche Gerrit.
+property.GERRIT_COMMENT_NEW_ISSUES_ONLY.name=Commenter seulement les nouveaux d\u00e9fauts
+property.GERRIT_COMMENT_NEW_ISSUES_ONLY.description=Sonar ne commentera que les nouveaux d\u00e9fauts. Les d\u00e9fauts existants ne seront pas remont\u00e9s.
