--- a/src/main/resources/org/sonar/l10n/gerrit_fr.properties
+++ b/src/main/resources/org/sonar/l10n/gerrit_fr.properties
@@ -30,6 +30,12 @@ property.GERRIT_REVISION_ID.name=ID de la r\u00e9vision
 property.GERRIT_REVISION_ID.description=Ne rien renseigner pour laisser Gerrit g\u00e9rer
 property.GERRIT_THRESHOLD.name=Seuil des alertes
 property.GERRIT_THRESHOLD.description=Seuil au dela duquel Sonar votera -1
+property.GERRIT_VOTE_NO_ISSUE.name=Vote when no issues
+property.GERRIT_VOTE_NO_ISSUE.description=What to vote when no issues are detected
+property.GERRIT_VOTE_ISSUE_BELOW_THRESHOLD.name=Vote < threshold
+property.GERRIT_VOTE_ISSUE_BELOW_THRESHOLD.description=What to vote when issues below threshold are detected
+property.GERRIT_VOTE_ISSUE_ABOVE_THRESHOLD.name=Vote > threshold
+property.GERRIT_VOTE_ISSUE_ABOVE_THRESHOLD.description=What to vote when issues above threshold are detected
 property.GERRIT_FORCE_BRANCH.name=Forcer la branche
 property.GERRIT_FORCE_BRANCH.description=Mettre \u00e0 true pour surcharger et créer automatiquement une nouvelle branche dans SonarQube avec le nom de la branche Gerrit.
 property.GERRIT_COMMENT_NEW_ISSUES_ONLY.name=Commenter seulement les nouveaux d\u00e9fauts
