update french translation
Change-Id: I30ee3aed359638f2bd2019e9b5672af15919bf83

--- a/src/main/resources/org/sonar/l10n/gerrit_fr.properties
+++ b/src/main/resources/org/sonar/l10n/gerrit_fr.properties
@@ -30,13 +30,13 @@ property.GERRIT_REVISION_ID.name=ID de la r\u00e9vision
 property.GERRIT_REVISION_ID.description=Ne rien renseigner pour laisser Gerrit g\u00e9rer
 property.GERRIT_THRESHOLD.name=Seuil des alertes
 property.GERRIT_THRESHOLD.description=Seuil au dela duquel Sonar votera -1
-property.GERRIT_VOTE_NO_ISSUE.name=Vote sans probl\u00e9me
-property.GERRIT_VOTE_NO_ISSUE.description=Valeur du vote lorsque aucune alerte n'est d\u00e9t\u00e9ct\u00e9e
-property.GERRIT_VOTE_ISSUE_BELOW_THRESHOLD.name=Vote < seuil
-property.GERRIT_VOTE_ISSUE_BELOW_THRESHOLD.description=Valeur du vote si les alertes sont toutes inf\u00e9rieures au seuil
-property.GERRIT_VOTE_ISSUE_ABOVE_THRESHOLD.name=Vote > seuil
-property.GERRIT_VOTE_ISSUE_ABOVE_THRESHOLD.description=Valeur du vote si les alertes sont sup\u00e9rieures au seuil
+property.GERRIT_VOTE_NO_ISSUE.name=Vote sans d\u00e9faut
+property.GERRIT_VOTE_NO_ISSUE.description=Valeur du vote lorsque aucun d\u00e9faut n'est d\u00e9t\u00e9ct\u00e9
+property.GERRIT_VOTE_ISSUE_BELOW_THRESHOLD.name=Vote \u003c seuil
+property.GERRIT_VOTE_ISSUE_BELOW_THRESHOLD.description=Valeur du vote si les d\u00e9fauts sont tous inf\u00e8rieurs au seuil
+property.GERRIT_VOTE_ISSUE_ABOVE_THRESHOLD.name=Vote \u2265 seuil
+property.GERRIT_VOTE_ISSUE_ABOVE_THRESHOLD.description=Valeur du vote si les d\u00e9fauts sont sup\u00e8rieurs au seuil
 property.GERRIT_FORCE_BRANCH.name=Forcer la branche
-property.GERRIT_FORCE_BRANCH.description=Mettre \u00e0 true pour surcharger et créer automatiquement une nouvelle branche dans SonarQube avec le nom de la branche Gerrit.
+property.GERRIT_FORCE_BRANCH.description=Mettre \u00e0 true pour surcharger et cr\u00e9er automatiquement une nouvelle branche dans SonarQube avec le nom de la branche Gerrit.
 property.GERRIT_COMMENT_NEW_ISSUES_ONLY.name=Commenter seulement les nouveaux d\u00e9fauts
 property.GERRIT_COMMENT_NEW_ISSUES_ONLY.description=Sonar ne commentera que les nouveaux d\u00e9fauts. Les d\u00e9fauts existants ne seront pas remont\u00e9s.
