Rework to add ssh support. Removed Jackson dependency. Removed failing tests.
Changes :
- GERRIT_HTTP_PORT is now GERRIT_PORT
- GERRIT_HTTP_USERNAME is now GERRIT_USERNAME
- GERRIT_HTTP_PASSWORD is now GERRIT_PASSWORD

Closes #30

Change-Id: I2c5174e3ceb812f51b4615b2036dc6f34994ac97

--- a/src/main/resources/org/sonar/l10n/gerrit.properties
+++ b/src/main/resources/org/sonar/l10n/gerrit.properties
@@ -10,16 +10,18 @@ property.GERRIT_SCHEME.name=Server scheme
 property.GERRIT_SCHEME.description=Define the server connection scheme
 property.GERRIT_HOST.name=Server host
 property.GERRIT_HOST.description=Define the gerrit host
-property.GERRIT_HTTP_PORT.name=Server port
-property.GERRIT_HTTP_PORT.description=Define the gerrit port
-property.GERRIT_HTTP_USERNAME.name=Username
-property.GERRIT_HTTP_USERNAME.description=Define the username to login with. Blank for anonymous.
-property.GERRIT_HTTP_PASSWORD.name=Password
-property.GERRIT_HTTP_PASSWORD.description=Define the password associated
+property.GERRIT_PORT.name=Server port
+property.GERRIT_PORT.description=Define the gerrit port
+property.GERRIT_USERNAME.name=Username
+property.GERRIT_USERNAME.description=Define the username to login with. Blank for anonymous over http.
+property.GERRIT_PASSWORD.name=Password
+property.GERRIT_PASSWORD.description=Define the password for the username (REST) or the private key (SSH)
 property.GERRIT_HTTP_AUTH_SCHEME.name=Server authentication scheme
 property.GERRIT_HTTP_AUTH_SCHEME.description=Define the server authentication scheme
 property.GERRIT_BASE_PATH.name=Base path
 property.GERRIT_BASE_PATH.description=Define an alternate server base path
+property.GERRIT_SSH_KEY_PATH.name=SSH private key path
+property.GERRIT_SSH_KEY_PATH.description=Path to the SSH private key to use when connection scheme is ssh.
 property.GERRIT_LABEL.name=Review label
 property.GERRIT_LABEL.description=Define the label which the vote will change
 property.GERRIT_MESSAGE.name=Review message
