--- a/src/main/resources/org/sonar/l10n/gerrit_fr.properties
+++ b/src/main/resources/org/sonar/l10n/gerrit_fr.properties
@@ -6,20 +6,22 @@ property.category.Gerrit.Review=R\u00e9vision
 property.category.Gerrit.Review.description=R\u00e9glages de r\u00e9vision
 property.GERRIT_ENABLED.name=Plugin actif
 property.GERRIT_ENABLED.description=Active ou d\u00e9sactive le plugin
-property.GERRIT_SCHEME.name=Sch\u00e9ma d'URI
-property.GERRIT_SCHEME.description=D\u00e9fini le sch\u00e9ma d'URI \u00e0 utiliser
+property.GERRIT_SCHEME.name=Sch\u00e9ma d'URL
+property.GERRIT_SCHEME.description=D\u00e9fini le sch\u00e9ma d'URL \u00e0 utiliser
 property.GERRIT_HOST.name=Serveur
 property.GERRIT_HOST.description=D\u00e9fini le serveur Gerrit
-property.GERRIT_HTTP_PORT.name=Port du serveur
-property.GERRIT_HTTP_PORT.description=D\u00e9fini le port du serveur Gerrit
-property.GERRIT_HTTP_USERNAME.name=Nom d'utilisateur
-property.GERRIT_HTTP_USERNAME.description=D\u00e9fini le nom d'utilisateur \u00e0 utiliser. Vide pour une connection anonyme.
-property.GERRIT_HTTP_PASSWORD.name=Mot de passe
-property.GERRIT_HTTP_PASSWORD.description=D\u00e9fini le mot de passe \u00e0 utiliser
+property.GERRIT_PORT.name=Port du serveur
+property.GERRIT_PORT.description=D\u00e9fini le port du serveur Gerrit
+property.GERRIT_USERNAME.name=Nom d'utilisateur
+property.GERRIT_USERNAME.description=D\u00e9fini le nom d'utilisateur \u00e0 utiliser. Vide pour une connection anonyme avec http.
+property.GERRIT_PASSWORD.name=Mot de passe
+property.GERRIT_PASSWORD.description=D\u00e9fini le mot de passe \u00e0 utiliser pour la connection ou la clef priv\u00e9e.
 property.GERRIT_HTTP_AUTH_SCHEME.name=Sch\u00e9ma d'authentification
 property.GERRIT_HTTP_AUTH_SCHEME.description=D\u00e9fini le sch\u00e9ma d'authentification du serveur
 property.GERRIT_BASE_PATH.name=Chemin de base
 property.GERRIT_BASE_PATH.description=D\u00e9fini un chemin de base alternatif
+property.GERRIT_SSH_KEY_PATH.name=Chemin de la clef priv\u00e9e SSH
+property.GERRIT_SSH_KEY_PATH.description=Chemin de la clef priv\u00e9e SSH \u00e0 utiliser lorsque le sch\u00e9ma d'URI est ssh.
 property.GERRIT_LABEL.name=\u00c9tiquette de r\u00e9vision
 property.GERRIT_LABEL.description=D\u00e9fini l'\u00e9tiquette \u00e0 laquelle Sonar votera
 property.GERRIT_MESSAGE.name=Message de r\u00e9vision
