--- a/src/main/resources/org/sonar/l10n/gerrit.properties
+++ b/src/main/resources/org/sonar/l10n/gerrit.properties
@@ -10,16 +10,18 @@ property.GERRIT_SCHEME.name=Server scheme
 property.GERRIT_SCHEME.description=Define the server connection scheme
 property.GERRIT_HOST.name=Server host
 property.GERRIT_HOST.description=Define the gerrit host
-property.GERRIT_HTTP_PORT.name=Server port
-property.GERRIT_HTTP_PORT.description=Define the gerrit port
-property.GERRIT_HTTP_USERNAME.name=Username
-property.GERRIT_HTTP_USERNAME.description=Define the username to login with. Blank for anonymous.
-property.GERRIT_HTTP_PASSWORD.name=Password
-property.GERRIT_HTTP_PASSWORD.description=Define the password associated
+property.GERRIT_PORT.name=Server port
+property.GERRIT_PORT.description=Define the gerrit port
+property.GERRIT_USERNAME.name=Username
+property.GERRIT_USERNAME.description=Define the username to login with. Blank for anonymous over http.
+property.GERRIT_PASSWORD.name=Password
+property.GERRIT_PASSWORD.description=Define the password for the username (REST) or the private key (SSH)
 property.GERRIT_HTTP_AUTH_SCHEME.name=Server authentication scheme
 property.GERRIT_HTTP_AUTH_SCHEME.description=Define the server authentication scheme
 property.GERRIT_BASE_PATH.name=Base path
 property.GERRIT_BASE_PATH.description=Define an alternate server base path
+property.GERRIT_SSH_KEY_PATH.name=SSH private key path
+property.GERRIT_SSH_KEY_PATH.description=Path to the SSH private key to use when connection scheme is ssh.
 property.GERRIT_LABEL.name=Review label
 property.GERRIT_LABEL.description=Define the label which the vote will change
 property.GERRIT_MESSAGE.name=Review message
@@ -30,3 +32,13 @@ property.GERRIT_REVISION_ID.name=Patchset Revision ID
 property.GERRIT_REVISION_ID.description=Leave blank to delegate the definition by gerrit
 property.GERRIT_THRESHOLD.name=Alert threshold
 property.GERRIT_THRESHOLD.description=Sonar will vote -1 above this threshold
+property.GERRIT_VOTE_NO_ISSUE.name=Vote when no issues
+property.GERRIT_VOTE_NO_ISSUE.description=What to vote when no issues are detected
+property.GERRIT_VOTE_ISSUE_BELOW_THRESHOLD.name=Vote \u003c threshold
+property.GERRIT_VOTE_ISSUE_BELOW_THRESHOLD.description=What to vote when issues below threshold are detected
+property.GERRIT_VOTE_ISSUE_ABOVE_THRESHOLD.name=Vote \u2265 threshold
+property.GERRIT_VOTE_ISSUE_ABOVE_THRESHOLD.description=What to vote when issues above threshold are detected
+property.GERRIT_FORCE_BRANCH.name=Force branch
+property.GERRIT_FORCE_BRANCH.description=Set to true to force branch creation in SQ and override its name with Gerrit's branch name.
+property.GERRIT_COMMENT_NEW_ISSUES_ONLY.name=Comment new issues only
+property.GERRIT_COMMENT_NEW_ISSUES_ONLY.description=Sonar comment only newly created issues. Existing issues will not be reported.
