--- a/src/main/resources/org/sonar/l10n/gerrit_fr.properties
+++ b/src/main/resources/org/sonar/l10n/gerrit_fr.properties
@@ -6,20 +6,22 @@ property.category.Gerrit.Review=R\u00e9vision
 property.category.Gerrit.Review.description=R\u00e9glages de r\u00e9vision
 property.GERRIT_ENABLED.name=Plugin actif
 property.GERRIT_ENABLED.description=Active ou d\u00e9sactive le plugin
-property.GERRIT_SCHEME.name=Sch\u00e9ma d'URI
-property.GERRIT_SCHEME.description=D\u00e9fini le sch\u00e9ma d'URI \u00e0 utiliser
+property.GERRIT_SCHEME.name=Sch\u00e9ma d'URL
+property.GERRIT_SCHEME.description=D\u00e9fini le sch\u00e9ma d'URL \u00e0 utiliser
 property.GERRIT_HOST.name=Serveur
 property.GERRIT_HOST.description=D\u00e9fini le serveur Gerrit
-property.GERRIT_HTTP_PORT.name=Port du serveur
-property.GERRIT_HTTP_PORT.description=D\u00e9fini le port du serveur Gerrit
-property.GERRIT_HTTP_USERNAME.name=Nom d'utilisateur
-property.GERRIT_HTTP_USERNAME.description=D\u00e9fini le nom d'utilisateur \u00e0 utiliser. Vide pour une connection anonyme.
-property.GERRIT_HTTP_PASSWORD.name=Mot de passe
-property.GERRIT_HTTP_PASSWORD.description=D\u00e9fini le mot de passe \u00e0 utiliser
+property.GERRIT_PORT.name=Port du serveur
+property.GERRIT_PORT.description=D\u00e9fini le port du serveur Gerrit
+property.GERRIT_USERNAME.name=Nom d'utilisateur
+property.GERRIT_USERNAME.description=D\u00e9fini le nom d'utilisateur \u00e0 utiliser. Vide pour une connection anonyme avec http.
+property.GERRIT_PASSWORD.name=Mot de passe
+property.GERRIT_PASSWORD.description=D\u00e9fini le mot de passe \u00e0 utiliser pour la connection ou la clef priv\u00e9e.
 property.GERRIT_HTTP_AUTH_SCHEME.name=Sch\u00e9ma d'authentification
 property.GERRIT_HTTP_AUTH_SCHEME.description=D\u00e9fini le sch\u00e9ma d'authentification du serveur
 property.GERRIT_BASE_PATH.name=Chemin de base
 property.GERRIT_BASE_PATH.description=D\u00e9fini un chemin de base alternatif
+property.GERRIT_SSH_KEY_PATH.name=Chemin de la clef priv\u00e9e SSH
+property.GERRIT_SSH_KEY_PATH.description=Chemin de la clef priv\u00e9e SSH \u00e0 utiliser lorsque le sch\u00e9ma d'URI est ssh.
 property.GERRIT_LABEL.name=\u00c9tiquette de r\u00e9vision
 property.GERRIT_LABEL.description=D\u00e9fini l'\u00e9tiquette \u00e0 laquelle Sonar votera
 property.GERRIT_MESSAGE.name=Message de r\u00e9vision
@@ -30,3 +32,13 @@ property.GERRIT_REVISION_ID.name=ID de la r\u00e9vision
 property.GERRIT_REVISION_ID.description=Ne rien renseigner pour laisser Gerrit g\u00e9rer
 property.GERRIT_THRESHOLD.name=Seuil des alertes
 property.GERRIT_THRESHOLD.description=Seuil au dela duquel Sonar votera -1
+property.GERRIT_VOTE_NO_ISSUE.name=Vote sans d\u00e9faut
+property.GERRIT_VOTE_NO_ISSUE.description=Valeur du vote lorsque aucun d\u00e9faut n'est d\u00e9t\u00e9ct\u00e9
+property.GERRIT_VOTE_ISSUE_BELOW_THRESHOLD.name=Vote \u003c seuil
+property.GERRIT_VOTE_ISSUE_BELOW_THRESHOLD.description=Valeur du vote si les d\u00e9fauts sont tous inf\u00e8rieurs au seuil
+property.GERRIT_VOTE_ISSUE_ABOVE_THRESHOLD.name=Vote \u2265 seuil
+property.GERRIT_VOTE_ISSUE_ABOVE_THRESHOLD.description=Valeur du vote si les d\u00e9fauts sont sup\u00e8rieurs au seuil
+property.GERRIT_FORCE_BRANCH.name=Forcer la branche
+property.GERRIT_FORCE_BRANCH.description=Mettre \u00e0 true pour surcharger et cr\u00e9er automatiquement une nouvelle branche dans SonarQube avec le nom de la branche Gerrit.
+property.GERRIT_COMMENT_NEW_ISSUES_ONLY.name=Commenter seulement les nouveaux d\u00e9fauts
+property.GERRIT_COMMENT_NEW_ISSUES_ONLY.description=Sonar ne commentera que les nouveaux d\u00e9fauts. Les d\u00e9fauts existants ne seront pas remont\u00e9s.
