Fix custom issue comments
- Remove unused constants
- Respect coding style
- Add message internationalization messages

--- a/src/main/resources/org/sonar/l10n/gerrit.properties
+++ b/src/main/resources/org/sonar/l10n/gerrit.properties
@@ -26,6 +26,8 @@ property.GERRIT_LABEL.name=Review label
 property.GERRIT_LABEL.description=Define the label which the vote will change
 property.GERRIT_MESSAGE.name=Review message
 property.GERRIT_MESSAGE.description=Define the message which will be added in comment
+property.GERRIT_ISSUE_COMMENT.name=Issue comment
+property.GERRIT_ISSUE_COMMENT.description=Define the message which will be used to comment issues
 property.GERRIT_CHANGE_ID.name=Change ID
 property.GERRIT_CHANGE_ID.description=Leave blank to delegate the definition by gerrit
 property.GERRIT_REVISION_ID.name=Patchset Revision ID
