--- a/src/main/resources/org/sonar/l10n/gerrit_fr.properties
+++ b/src/main/resources/org/sonar/l10n/gerrit_fr.properties
@@ -26,6 +26,8 @@ property.GERRIT_LABEL.name=\u00c9tiquette de r\u00e9vision
 property.GERRIT_LABEL.description=D\u00e9fini l'\u00e9tiquette \u00e0 laquelle Sonar votera
 property.GERRIT_MESSAGE.name=Message de r\u00e9vision
 property.GERRIT_MESSAGE.description=D\u00e9fini le message qui sera ajout\u00e9 en commentaire de la r\u00e9vision
+property.GERRIT_ISSUE_COMMENT.name=Commentaire des d\u00e9fauts
+property.GERRIT_ISSUE_COMMENT.description=D\u00e9fini le message qui sera ajout\u00e9 en commentaire des d\u00e9fauts
 property.GERRIT_CHANGE_ID.name=ID du changement
 property.GERRIT_CHANGE_ID.description=Ne rien renseigner pour laisser Gerrit g\u00e9rer
 property.GERRIT_REVISION_ID.name=ID de la r\u00e9vision
