--- a/src/main/resources/org/sonar/l10n/gerrit.properties
+++ b/src/main/resources/org/sonar/l10n/gerrit.properties
@@ -28,8 +28,8 @@ property.GERRIT_MESSAGE.name=Review message
 property.GERRIT_MESSAGE.description=Define the message which will be added in comment
 property.GERRIT_ISSUE_COMMENT.name=Issue comment
 property.GERRIT_ISSUE_COMMENT.description=Define the message which will be used to comment issues
-property.GERRIT_CHANGE_ID.name=Change ID
-property.GERRIT_CHANGE_ID.description=Leave blank to delegate the definition by gerrit
+property.GERRIT_CHANGE_NUMBER.name=Change number
+property.GERRIT_CHANGE_NUMBER.description=Leave blank to delegate the definition by gerrit
 property.GERRIT_REVISION_ID.name=Patchset Revision ID
 property.GERRIT_REVISION_ID.description=Leave blank to delegate the definition by gerrit
 property.GERRIT_THRESHOLD.name=Alert threshold
